--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
            
            <ul>
                <li class="inline"><a class="button" href="index.html">Homepage</a></li>
-               <li class="inline"></li>
+               <li class="inline"><a class="button" href="">Button text</a></li>
                <li class="inline"></li>
                <li class="inline"></li>
            </ul>
