--- a/MyFuture.html
+++ b/MyFuture.html
@@ -22,3 +22,7 @@
             <h2>High School</h2>
             <p>I would like to got to one of two schools Millikan or McBride. I would like to go to McBride because of it's technology program. On the other hand I would like to go to Millikan due to the fact that most of my friends are going, also I have a few people that are recomending that I go to this school. At this point in time I am not completely decided on which of the two schools I will go to.</p>
        </article>
+       <footer>
+         <a class="button" href="index.html">Back to Index</a>
+       </footer>
+</html>
