--- a/MyFuture.html
+++ b/MyFuture.html
@@ -26,7 +26,7 @@
        </article>
       <article>
          <h2>Collage</h2>
-         <p>I am not sure of what collage I will go to but I am thinking baout what possibilites I might have. </p>
+         <p>I am not sure of what collage I will go to but I am thinking baout what possibilites I might have. One that I have looked at because of some school feild trips is Long Beach City Collage (LBCC). I don't know if this will be an option but it is one of many possibilites.  </p>
       </article>
        <footer>
          <a class="button" href="index.html">Back to Index</a>
