--- a/MyFuture.html
+++ b/MyFuture.html
@@ -25,8 +25,8 @@
             <p>I would like to got to one of two schools Millikan or McBride. I would like to go to McBride because of it's technology program. On the other hand I would like to go to Millikan due to the fact that most of my friends are going, also I have a few people that are recomending that I go to this school. At this point in time I am not completely decided on which of the two schools I will go to.</p>
        </article>
       <article>
-         <h2>Collage</h2>
-         <p>I am not sure of what collage I will go to but I am thinking baout what possibilites I might have. One that I have looked at because of some school feild trips is Long Beach City Collage (LBCC). I don't know if this will be an option but it is one of many possibilites.  </p>
+         <h2>College</h2>
+         <p>I am not sure of what college I will go to but I am thinking about what possibilites I might have. One that I have looked at because of some school feild trips is Long Beach City College (LBCC). I don't know if this will be an option but it is one of many possibilites.  </p>
       </article>
        <footer>
          <a class="button" href="index.html">Back to Index</a>
