--- a/MyFuture.html
+++ b/MyFuture.html
@@ -14,7 +14,7 @@
            <ul>
                <li class="inline"><a class="button" href="index.html">Homepage</a></li>
                <li class="inline"><a class="button" href="MyFuture.html">My future</a></li>
-               <li class="inline"></li>
+               <li class="inline"><a class="button" href="ATM.html">ATM</a></li>
                <li class="inline"></li>
            </ul>
        </header>
