--- a/Atm.html
+++ b/Atm.html
@@ -15,14 +15,21 @@
            <ul>
                <li class="inline"><a class="button" href="index.html">Homepage</a></li>
                <li class="inline"><a class="button" href="MyFuture.html">My future</a></li>
-               <li class="inline"><a class="button" href="ATM.html">ATM</a></li>
+               <li class="inline"><a class="button" href="Atm.html">ATM</a></li>
                <li class="inline"></li>
            </ul>
        </header>
        <article>
             <h2>6th Grade Learning</h2>
+            <p>In 6th grade we learnt about programs such as microsoft word,microsoft exel, and powerpoint. Also we started to learn how to type properly with our fingers on the home row</p>
             <ul>
                 <li>Typing</li>
                 <li>Microsoft Word</li>
-                <li></li>
+                <li>Microsoft Excel</li>
+                <li>Microsoft Powerpoint</li>
             </ul>
+        </article>
+        <footer>
+         <a class="button" href="index.html">Back to Index</a>
+       </footer>
+</html>
