--- a/Atm.html
+++ b/Atm.html
@@ -21,12 +21,12 @@
        </header>
        <article>
             <h2>6th Grade Learning</h2>
-            <p>In 6th grade we learnt about programs such as microsoft word,microsoft exel, and powerpoint. Also we started to learn how to type properly with our fingers on the home row</p>
+            <p>In 6th grade we learnt about programs such as microsoft word,microsoft exel, and powerpoint. We also started to learn how to type properly with our fingers on the home row</p>
             <ul>
-                <li>Typing</li>
-                <li>Microsoft Word</li>
-                <li>Microsoft Excel</li>
-                <li>Microsoft Powerpoint</li>
+                <ol>Typing</ol>
+                <ol>Microsoft Word</ol>
+                <ol>Microsoft Excel</ol>
+                <ol>Microsoft Powerpoint</ol>
             </ul>
         </article>
         <footer>
