--- a/MyPets.html
+++ b/MyPets.html
@@ -17,7 +17,7 @@
                <li class="inline"><a class="button" href="index.html">Homepage</a></li>
                <li class="inline"><a class="button" href="MyFuture.html">My future</a></li>
                <li class="inline"><a class="button" href="Atm.html">ATM</a></li>
-               <li class="inline"></li>
+               <li class="inline"><a class="button" href="MyPets.html">My Pets</a></li>
            </ul>
        </header>
        <article>
