--- a/Atm.html
+++ b/Atm.html
@@ -29,6 +29,12 @@
                 <ol>Microsoft Powerpoint</ol>
             </ul>
         </article>
+        <article>
+           <h2>7th Grade Learning</h2>
+           <p>In 7th grade we learnt about programs such as </p>
+           <ul>
+           </ul>
+        </article>
         <footer>
          <a class="button" href="index.html">Back to Index</a>
        </footer>
