--- a/MyPets.html
+++ b/MyPets.html
@@ -23,6 +23,16 @@
        <article>
             <h2>My pets</h2>
             <p>I love to collect all different kinds of pets such as snakes, lizards, spiders, cockroaches, and praying . At home I have a total of 13 pets. Most of these animals are spider that i have bought or caught in my backyard. I do have a pet dog named Max who I have had for the longest amount of time out of all my animals.</p>
+            <h2>Some of My Pets</h2>
+            <ul>
+               <li>Bearded Dragon</li>
+               <li>Elbino Corn Snake</li>
+               <li>Milk Snake</li>
+               <li>Chaco Golden Knee Tarantula</li>
+               <li>Pumpkin Patch Tarantula</li>
+               <li>My Dog Max</li>
+               <li>Madagascar Hissing cockroach</li>
+            </ul>
         </article>
         <footer>
          <a class="button" href="index.html">Back to Index</a>
