--- a/MyPets.html
+++ b/MyPets.html
@@ -22,7 +22,7 @@
        </header>
        <article>
             <h2>My pets</h2>
-            <img src="images/AvicVersiclor.jpg" alt="Here is a picture of a tarantula with it's young." width="350">
+            <img src="images/AvicVersicolor.jpg" alt="Here is a picture of a tarantula with it's young." width="350">
             <p>I love to collect all different kinds of pets such as snakes, lizards, spiders, cockroaches, and praying . At home I have a total of 13 pets. Most of these animals are spider that i have bought or caught in my backyard. I do have a pet dog named Max who I have had for the longest amount of time out of all my animals.</p>
             <h2>Some of My Pets</h2>
             <ul>
