--- a/Atm.html
+++ b/Atm.html
@@ -27,13 +27,30 @@
                 <ol>Microsoft Word</ol>
                 <ol>Microsoft Excel</ol>
                 <ol>Microsoft Powerpoint</ol>
+                <ol>Google</ol>
             </ul>
         </article>
         <article>
            <h2>7th Grade Learning</h2>
-           <p>In 7th grade we learnt about programs such as </p>
+           <p>In 7th grade we learnt about programs such as SketchUp, Karel Code, Photoshop, Floor planner, and InDesine. </p>
            <ul>
+              <ol>SketchUp</ol>
+              <ol>Karel code</ol>
+              <ol>Photoshop</ol>
+              <ol>Floor planner</ol>
+              <ol>InDesine</ol>
            </ul>
+        </article>
+         <h2>8th Grade Learning</h2>
+           <p>In 8th grade we learnt about programing with html and css.</p>
+           <ul>
+              <ol>Coding(Html and CSS)</ol>
+              <ol>est...</ol>
+           </ul>
+        </article>
+        </article>
+         <h2>ATM Reflection</h2>
+           <p>I have loved being in the ATM program it has been really fun to learn about the different programs that we can use. Some of my favorit programs have been learning how to use all the different parts of google. Also there are all the cool programs that other people may not know about such as SketchUp and coding in html and css.</p>
         </article>
         <footer>
          <a class="button" href="index.html">Back to Index</a>
