--- a/Atm.html
+++ b/Atm.html
@@ -41,6 +41,7 @@
               <ol>InDesine</ol>
            </ul>
         </article>
+        <article>
          <h2>8th Grade Learning</h2>
            <p>In 8th grade we learnt about programing with html and css.</p>
            <ul>
@@ -49,6 +50,7 @@
            </ul>
         </article>
         </article>
+        <article>
          <h2>ATM Reflection</h2>
            <p>I have loved being in the ATM program it has been really fun to learn about the different programs that we can use. Some of my favorit programs have been learning how to use all the different parts of google. Also there are all the cool programs that other people may not know about such as SketchUp and coding in html and css.</p>
         </article>
