--- a/Atm.html
+++ b/Atm.html
@@ -43,11 +43,14 @@
         </article>
         <article>
          <h2>8th Grade Learning</h2>
-           <p>In 8th grade we learnt about programing with html and css.</p>
+           <p>In 8th grade we learnt about programing with html and css. We also learn about iMovie and how to create our own movie or short video. One of the last things we learne in this class was how to work GarageBand which was all sound for videos. As you can see down below there is a video that we worked on in GarageBand> </p>
            <ul>
               <ol>Coding(Html and CSS)</ol>
+              <ol>iMovie</ol>
+              <ol>GarageBand</ol>
               <ol>est...</ol>
            </ul>
+           <iframe src="https://drive.google.com/file/d/1pCuk3CiU7M1OfP07IRpnFRhjIaIG-uvJ/preview" width="640" height="480"></iframe>
         </article>
         </article>
         <article>
